Auth middleware authentication tools hashing and more error handling added along protecting routes with required auth
